--- a/html/contact.html
+++ b/html/contact.html
@@ -119,19 +119,17 @@
             <div class="subtitleVideo">
                 <h3 class="contentSubtitle">Video</h3>
             </div>
-            <div class="videoContainer centerItemsGrid">
-                <iframe width="1280" height="720" src="https://www.youtube.com/embed/uO90A7jTVTo"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uO90A7jTVTo"
                     allowfullscreen></iframe>
             </div>
             <div class="subtitleMap">
                 <h3 class="contentSubtitle">Ubicación</h3>
             </div>
-            <div class="mapContainer centerItemsGrid">
-                <iframe
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.44366934056!2d-58.503337965168704!3d-34.61566245894793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1643766720197!5m2!1ses-419!2sar"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    allowfullscreen></iframe>
             </div>
         </section>
         <!-- Menu off-canvas carrito de compras -->
