--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css">
@@ -39,7 +38,7 @@
                 <a class="nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
                             class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
-                            <span class="visually-hidden"></span></i></a>
+                            <span class="visually-hidden"></span></span></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -62,7 +61,7 @@
                         <a class="cartBar nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart"
                             href="#menuCart"><i class="bi bi-cart-fill position-relative"><span
                                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
-                                    <span class="visually-hidden"></span></i></a>
+                                    <span class="visually-hidden"></span></span></i></a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -82,13 +81,13 @@
                 <h3>Introduce los datos de tu cuenta</h3>
                 <form>
                     <div class="mb-3 camp">
-                        <label for="exampleInputEmail1" class="form-label">E-mail usuario</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        <label for="e-mail" class="form-label">E-mail usuario</label>
+                        <input type="email" class="form-control" id="e-mail" 
                             placeholder="Correo electronico">
                     </div>
                     <div class="mb-3 camp">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+                        <label for="password-1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password-1" placeholder="Contraseña">
                     </div>
                     <button type="submit" class="btn btn-outline-info">Iniciar sesión</button>
                     <p>¿No tienes cuenta?<a href="./register.html"> Registrate</a></p>
@@ -128,7 +127,7 @@
             <section class="sectionSocials">
                 <div class="newsletter">
                     <h3>Suscribete</h3>
-                    <form action="">
+                    <form action="#">
                         <input type="email" name="email" id="email" placeholder="Ingresa tu email" />
                         <button class="btnSubmitNews btn btn-outline-info">Enviar</button>
                     </form>
