--- a/html/products.html
+++ b/html/products.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css">
@@ -39,7 +38,7 @@
                 <a class="nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
                             class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
-                            <span class="visually-hidden"></span></i></a>
+                            <span class="visually-hidden"></span></span></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -62,7 +61,7 @@
                         <a class="cartBar nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart"
                             href="#menuCart"><i class="bi bi-cart-fill position-relative"><span
                                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
-                                    <span class="visually-hidden"></span></i></a>
+                                    <span class="visually-hidden"></span></span></i></a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -98,7 +97,7 @@
             </section>
             <!-- Productos -->
             <div class="productCardHome card product1">
-                <img src="../images/pda_Tomb Raider (2013).webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Tomb-Raider-(2013).webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -106,7 +105,7 @@
                 </div>
             </div>
             <div class="productCardHome card product2">
-                <img src="../images/pda_The Witcher 3 Wild Hunt.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -114,7 +113,7 @@
                 </div>
             </div>
             <div class="productCardHome card product3">
-                <img src="../images/pda_Red Dead Redemption 2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Red-Dead-Redemption-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -130,7 +129,7 @@
                 </div>
             </div>
             <div class="productCardHome card product5">
-                <img src="../images/pda_Portal 2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Portal-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -138,7 +137,7 @@
                 </div>
             </div>
             <div class="productCardHome card product6">
-                <img src="../images/pda_PAYDAY 2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_PAYDAY-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -154,7 +153,7 @@
                 </div>
             </div>
             <div class="productCardHome card product8">
-                <img src="../images/pda_Life is Strange.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Life-is-Strange.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -162,7 +161,7 @@
                 </div>
             </div>
             <div class="productCardHome card product9">
-                <img src="../images/pda_Left 4 Dead 2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Left-4-Dead-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -170,7 +169,7 @@
                 </div>
             </div>
             <div class="productCardHome card product10">
-                <img src="../images/pda_Hitman 3.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -178,7 +177,7 @@
                 </div>
             </div>
             <div class="productCardHome card product11">
-                <img src="../images/pda_Grand Theft Auto V.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -186,7 +185,7 @@
                 </div>
             </div>
             <div class="productCardHome card product12">
-                <img src="../images/pda_Forza Horizon 5.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Forza-Horizon-5.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -194,7 +193,7 @@
                 </div>
             </div>
             <div class="productCardHome card product13">
-                <img src="../images/pda_Fallout 4.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Fallout-4.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -202,7 +201,7 @@
                 </div>
             </div>
             <div class="productCardHome card product14">
-                <img src="../images/pda_DOOM (2016).webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_DOOM-(2016).webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -210,7 +209,7 @@
                 </div>
             </div>
             <div class="productCardHome card product15">
-                <img src="../images/pda_Destiny 2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Destiny-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -218,7 +217,7 @@
                 </div>
             </div>
             <div class="productCardHome card product16">
-                <img src="../images/pda_Counter-Strike Global.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Counter-Strike-Global.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -226,7 +225,7 @@
                 </div>
             </div>
             <div class="productCardHome card product17">
-                <img src="../images/pda_COD Modern Warfare.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_COD-Modern-Warfare.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -234,7 +233,7 @@
                 </div>
             </div>
             <div class="productCardHome card product18">
-                <img src="../images/pda_Borderlands 2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Borderlands-2.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -250,7 +249,7 @@
                 </div>
             </div>
             <div class="productCardHome card product20">
-                <img src="../images/pda_BioShock Infinite.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_BioShock-Infinite.webp" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">$5000</p>
@@ -291,7 +290,7 @@
             <section class="sectionSocials">
                 <div class="newsletter">
                     <h3>Suscribete</h3>
-                    <form action="">
+                    <form action="#">
                         <input type="email" name="email" id="email" placeholder="Ingresa tu email" />
                         <button class="btnSubmitNews btn btn-outline-info">Enviar</button>
                     </form>
