--- a/html/register.html
+++ b/html/register.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css">
@@ -39,7 +38,7 @@
                 <a class="nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
                             class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
-                            <span class="visually-hidden"></span></i></a>
+                            <span class="visually-hidden"></span></span></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -62,7 +61,7 @@
                         <a class="cartBar nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart"
                             href="#menuCart"><i class="bi bi-cart-fill position-relative"><span
                                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
-                                    <span class="visually-hidden"></span></i></a>
+                                    <span class="visually-hidden"></span></span></i></a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -83,19 +82,19 @@
                 <form>
                     <div class="mb-3 camp">
                         <label for="name" class="form-label">Nombre</label>
-                        <input type="name" class="form-control" id="name" placeholder="Nombre de usuario" required>
+                        <input type="text" class="form-control" id="name" placeholder="Nombre de usuario" required>
                     </div>
                     <div class="mb-3 camp">
-                        <label for="email" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="email" placeholder="E-mail" required>
+                        <label for="e-mail" class="form-label">E-mail</label>
+                        <input type="email" class="form-control" id="e-mail" placeholder="E-mail" required>
                     </div>
                     <div class="mb-3 camp">
-                        <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
+                        <label for="password-1" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="password-1" placeholder="Contraseña" required>
                     </div>
                     <div class="mb-3 camp">
-                        <label for="password" class="form-label">Confirmar contraseña</label>
-                        <input type="password" class="form-control" id="password" placeholder="Confirmar contraseña"
+                        <label for="password-2" class="form-label">Confirmar contraseña</label>
+                        <input type="password" class="form-control" id="password-2" placeholder="Confirmar contraseña"
                             required>
                     </div>
                     <button type="submit" class="btn btn-outline-info">Registrarse</button>
@@ -136,7 +135,7 @@
             <section class="sectionSocials">
                 <div class="newsletter">
                     <h3>Suscribete</h3>
-                    <form action="">
+                    <form action="#">
                         <input type="email" name="email" id="email" placeholder="Ingresa tu email" />
                         <button class="btnSubmitNews btn btn-outline-info">Enviar</button>
                     </form>
