--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -41,7 +40,7 @@
                 <a class="nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart" href="#menuCart"><i
                         class="bi bi-cart-fill position-relative"><span
                             class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
-                            <span class="visually-hidden"></span></i></a>
+                            <span class="visually-hidden"></span></span></i></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -64,7 +63,7 @@
                         <a class="cartBar nav-link" data-bs-toggle="offcanvas" aria-controls="menuCart"
                             href="#menuCart"><i class="bi bi-cart-fill position-relative"><span
                                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0
-                                    <span class="visually-hidden"></span></i></a>
+                                    <span class="visually-hidden"></span></span></i></a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -91,35 +90,35 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/slider_ForzaHorizon5.webp" class="d-block w-100" alt="slide1">
+                    <img src="./images/slider_Forza-Horizon-5.webp" class="d-block w-100" alt="slide1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>FORZA HORIZON 5</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider_Borderlands2.webp" class="d-block w-100" alt="slide2">
+                    <img src="./images/slider_Borderlands-2.webp" class="d-block w-100" alt="slide2">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>BORDERLANDS 2</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider_RedDeadRedemption2.webp" class="d-block w-100" alt="slide3">
+                    <img src="./images/slider_Red-Dead-Redemption-2.webp" class="d-block w-100" alt="slide3">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>RED DEAD REDEMPTION 2</h5>
                         <p>Some representative placeholder content for the third slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider_TheWitcher3WildHunt.webp" class="d-block w-100" alt="slide4">
+                    <img src="./images/slider_The-Witcher-3-Wild-Hunt.webp" class="d-block w-100" alt="slide4">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>THE WITCHER 3</h5>
                         <p>Some representative placeholder content for the third slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider_COD Modern Warfare.webp" class="d-block w-100" alt="slide5">
+                    <img src="./images/slider_COD-Modern-Warfare.webp" class="d-block w-100" alt="slide5">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>COD MODERN WARFARE</h5>
                         <p>Some representative placeholder content for the third slide.</p>
@@ -144,7 +143,7 @@
             </div>
             <div class="productsHome">
                 <div class="productCardHome card product1">
-                    <img src="./images/pda_COD Modern Warfare.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_COD-Modern-Warfare.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -152,7 +151,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product2">
-                    <img src="./images/pda_BioShock Infinite.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_BioShock-Infinite.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -160,7 +159,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product3">
-                    <img src="./images/pda_Borderlands 2.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Borderlands-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -168,7 +167,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product4">
-                    <img src="./images/pda_Destiny 2.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Destiny-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -176,7 +175,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product5">
-                    <img src="./images/pda_Grand Theft Auto V.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -184,7 +183,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product6">
-                    <img src="./images/pda_Hitman 3.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -192,7 +191,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product7">
-                    <img src="./images/pda_Fallout 4.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Fallout-4.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -200,7 +199,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product8">
-                    <img src="./images/pda_The Witcher 3 Wild Hunt.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -224,7 +223,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product2">
-                    <img src="./images/pda_DOOM (2016).webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_DOOM-(2016).webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -232,7 +231,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product3">
-                    <img src="./images/pda_The Witcher 3 Wild Hunt.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -240,7 +239,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product4">
-                    <img src="./images/pda_Half-Life 2.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Half-Life-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -248,7 +247,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product5">
-                    <img src="./images/pda_Hitman 3.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -256,7 +255,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product6">
-                    <img src="./images/pda_PAYDAY 2.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_PAYDAY-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -264,7 +263,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product7">
-                    <img src="./images/pda_Counter-Strike Global.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Counter-Strike-Global.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -272,7 +271,7 @@
                     </div>
                 </div>
                 <div class="productCardHome card product8">
-                    <img src="./images/pda_Grand Theft Auto V.webp" class="card-img-top" alt="producto" />
+                    <img src="./images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Producto</h5>
                         <p class="card-text">$5000</p>
@@ -314,7 +313,7 @@
             <section class="sectionSocials">
                 <div class="newsletter">
                     <h3>Suscribete</h3>
-                    <form action="">
+                    <form action="#">
                         <input type="email" name="email" id="email" placeholder="Ingresa tu email" />
                         <button class="btnSubmitNews btn btn-outline-info">Enviar</button>
                     </form>
