--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="icono/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icono/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icono/favicon-16x16.png">
+    <link rel="manifest" href="icono/site.webmanifest">
+    <link rel="mask-icon" href="icono/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="icono/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="icono/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
